Fixed the vertical align of elements marked with the grid-cell SASS mixin

--- a/cocktail/html/resources/styles/_grid.scss
+++ b/cocktail/html/resources/styles/_grid.scss
@@ -184,6 +184,7 @@ $grid-margin: 50px;
     }
     @include grid($expr) {
         display: table-cell;
+        vertical-align: top;
         width: grid-columns($columns) + $spacing * grid-spacing();
         @content;
     }
